--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,20 @@
 default: &default
-        adapter: postgresql
-        encoding: unicode
-        pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-        timeout: 5000
+  adapter: postgresql
+  encoding: unicode
 
-      development:
-        <<: *default
-        host: localhost
-        port: 5432
-        user: postgres
-        database: rubydeploy_dev
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-      test:
-        <<: *default
-        host: localhost
-        port: 5432
-        database: rubydeploy_test
+development:
+  <<: *default
+  database: party_maker_development
 
-      production:
-        <<: *default
-        host: localhost
-        port: 5432
-        database: party_maker_production
-        username: deploy
-        password: <%= ENV["PARTY_MAKER_DATABASE_PASSWORD"] %>
+test:
+  <<: *default
+  database: party_maker_test
+
+production:
+  <<: *default
+  # url: <%= ENV["DATABASE_URL"] %> # это добавлено для деплоя на railway.app
+  database: party_maker_production
+  username: party_maker
+  password: <%= ENV["PARTY_MAKER_DATABASE_PASSWORD"] %>
