--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,26 @@
-default: &default
-  adapter: postgresql
-  encoding: unicode
+ default: &default
+        adapter: postgresql
+        encoding: unicode
+        pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+        timeout: 5000
 
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+      development:
+        <<: *default
+        host: localhost
+        port: 5432
+        user: postgres
+        database: rubydeploy_dev
 
-development:
-  <<: *default
-  database: party_maker_development
+      test:
+        <<: *default
+        host: localhost
+        port: 5432
+        database: rubydeploy_test
 
-test:
-  <<: *default
-  database: party_maker_test
-
-production:
-  <<: *default
-  # url: <%= ENV["DATABASE_URL"] %> # это добавлено для деплоя на railway.app
-  database: party_maker_production
-  username: party_maker
-  password: <%= ENV["PARTY_MAKER_DATABASE_PASSWORD"] %>
+      production:
+        <<: *default
+        host: localhost
+        port: 5432
+        database: party_maker_production
+        username: deploy
+        password: 'incoherence'
