--- a/config/database.yml
+++ b/config/database.yml
@@ -23,4 +23,4 @@
         port: 5432
         database: party_maker_production
         username: deploy
-        password: 'incoherence'
+        password: incoherence
